[package]
name = "calc"
version = "0.4.1"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"
description = "CLI calculator app"
license = "GPL-3.0-only"
repository = "https://github.com/coriolinus/calc"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "mathematics",
]
keywords = ["calculator", "cli"]

[dependencies]
anyhow = { version = "1.0.75", optional = true }
clap = { version = "4.4.8", features = ["derive"], optional = true }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
lazy_static = "1.4.0"
num-runtime-fmt = "0.1"
regex = "1.10.2"
rustyline = { version = "12.0.0", optional = true }
thiserror = "1.0.50"

[build-dependencies]
lalrpop = "0.20.0"

[features]
default = ["cli"]
cli = [
    "anyhow",
    "clap",
    "rustyline",
]

[[bin]]
name = "calc"
required-features = ["cli"]
