[package]
name = "calc"
version = "0.4.1"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"
description = "CLI calculator app"
license = "GPL-3.0-only"
repository = "https://github.com/coriolinus/calc"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "mathematics",
]
keywords = ["calculator", "cli"]

[dependencies]
anyhow = { version = "1.0.94", optional = true }
clap = { version = "4.5.23", features = ["derive"], optional = true }
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
lazy_static = "1.5.0"
num-runtime-fmt = "0.1"
regex = "1.11.1"
rustyline = { version = "12.0.0", optional = true }
thiserror = "1.0.69"

[build-dependencies]
lalrpop = "0.20.2"

[features]
default = ["cli"]
cli = [
    "anyhow",
    "clap",
    "rustyline",
]

[[bin]]
name = "calc"
required-features = ["cli"]
